# gerpa

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  environment.yml  gerpa.example  pyproject.toml  requirements.txt
chats/2025/05/28/claude/: 20250528233017_01_LLM_Prototyping_Monorepo_CLI.py  20250529021925_Minimal_Monorepo_for_LLM_Prototyping.md  readme.md
chats/2025/05/29/gemini/: chat.md
chats/2025/06/02/: readme.md
chats/2025/06/02/claude/: 20250604174847_00_Security_of_~_.local_bin_Dev_Scripts.md
chats/2025/06/05/gemini/: chat.md  pasted.md  readme.md
chats/claude_2025-05-28/: 20250528233017_00_Minimal_Monorepo_for_LLM_Prototyping.md  20250528233017_02_LLM_Prototyping_Monorepo_CLI.py  readme.md
chats/claude_2025-05-29/: 20250529100658_00_Manually_Bypass_Evaluator_for_Ground_Truth_Verification.md
chats/claude_2025-05-29/1/: readme.md
chats/claude_2025-05-29/2/: 20250529102134_00_Handling_Local_Files_and_URLs_in_Gemini_API.md  pasted.md
chats/gemini_2025-05-29/: readme.md
examples/1-paris/eval_results/: eval_results_20250529_031952.csv  eval_results_20250529_031952.json  eval_results_20250529_031952.yml
examples/1-paris/responses/: 20250529_020903_115049a2_gemini.yaml
gerpa/: __init__.py  main.py
gerpa/templates/: CONDA.md  POETRY.md
gerpa/templates/configs/git/gitignore/: TEMPLATE.md
gerpa/templates/configs/make/file/: TEMPLATE.md
gerpa/templates/configs/pip/requirements/: TEMPLATE.md
gerpa/templates/docs/dotenv/example/: TEMPLATE.md
gerpa/templates/notebook/experiment/: TEMPLATE.md
(+5 files in other folders)
